--- a/index.html
+++ b/index.html
@@ -92,9 +92,8 @@
 </head>
 <body>
     <div class="container">
-        <h1>Redirecting...</h1>
-        <p>You will be redirected to <a href="https://1s.is/kho-tien-ich-online/">Kho Tiện Ích Online</a> in <span id="timer" class="timer">5</span> seconds.</p>
-        <p>If the redirection doesn’t happen, <a href="https://1s.is/kho-tien-ich-online/">click here</a>.</p>
+        <h1>Kho Tiện Ích Online 1s.is</h1>
+        <p>Chuyển hướng trong <span id="timer" class="timer">5</span> giây.</p>
     </div>
 </body>
 </html>
